# django_webpack_integration

./: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py
django_webpack_integration/: apps.py
django_webpack_integration/management/commands/: __init__.py  make_django_json.py  npm.py  npm_list.py
