[metadata]
name = django_webpack_integration
version = 0.1
author = Yegor
license = BSD
platform = any

[options]
zip_safe = false
include_package_data = true
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*
packages = django_webpack_integration

[install]
install-base=django_webpack_integration
